# serde_box

./: Cargo.toml
serde_box_macro/: Cargo.toml
serde_box_macro/src/: lib.rs
src/: lib.rs
