[package]
name = "serde_box"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metatype = "0.2.0"
serde = { version = "1.0.125", features = ["derive"] }
erased-serde = "0.3.13"
dashmap = "4.0.2"
ctor = "0.1.20"
serde_box_macro = { path = "./serde_box_macro" }

[dev-dependencies]
serde_json = "1.0.64"

[workspace]
members = [
    "serde_box_macro"
]
